tests/fixtures/invalid/max_bytes_int.py
# Cannot call max() with Bytes, Int
x = max(b"hello", 1)
